--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 03:05:04 2018</p>
+         Last Run: Sun Jul 22 04:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>2</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>40</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -48,21 +48,21 @@
                         <td>2</td>
                         <td>47</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NE</td>
                         <td>34</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>3</td>
-                        <td>55</td>
+                        <td>4</td>
+                        <td>56</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNE</td>
-                        <td>29</td>
+                        <td>30</td>
                      </tr>
                   </tbody>
                </table>
@@ -172,7 +172,7 @@
                "data":[
                  "2",
                  "2",
-                 "3"
+                 "4"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "46",
                  "47",
-                 "47",
-                 "55"
+                 "56"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "40",
+                 "37",
                  "34",
-                 "29"
+                 "30"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 03:05:04 2018</p>
+         Last Run: Sun Jul 22 04:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -231,13 +231,13 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
                         <td>42</td>
                         <td>2</td>
                         <td>11</td>
-                        <td>ESE</td>
+                        <td>SE</td>
                         <td>64</td>
                      </tr>
                      <tr>
@@ -246,23 +246,23 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>68</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>1</td>
                         <td>46</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -270,11 +270,11 @@
                         <td>17</td>
                         <td>17</td>
                         <td>24</td>
-                        <td>54</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>31</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -282,11 +282,11 @@
                         <td>15</td>
                         <td>15</td>
                         <td>24</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>26</td>
+                        <td>28</td>
                      </tr>
                   </tbody>
                </table>
@@ -332,9 +332,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
                  "20",
                  "20",
+                 "19",
                  "17",
                  "15"
                ]
@@ -345,9 +345,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
                  "20",
                  "20",
+                 "19",
                  "17",
                  "15"
                ]
@@ -415,10 +415,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "42",
-                 "43",
+                 "44",
                  "46",
-                 "54",
-                 "64"
+                 "56",
+                 "65"
                ]
              },
              {
@@ -427,10 +427,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "64",
-                 "68",
-                 "50",
-                 "31",
-                 "26"
+                 "67",
+                 "51",
+                 "33",
+                 "28"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 03:05:04 2018</p>
+         Last Run: Sun Jul 22 04:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -493,8 +493,8 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
                         <td>25</td>
                         <td>6</td>
@@ -517,8 +517,8 @@
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>29</td>
+                        <td>29</td>
                         <td>0</td>
                         <td>21</td>
                         <td>6</td>
@@ -572,9 +572,9 @@
                "data":[
                  "24",
                  "26",
-                 "27",
                  "28",
-                 "28"
+                 "28",
+                 "29"
                ]
              },
              {
@@ -585,9 +585,9 @@
                "data":[
                  "24",
                  "26",
-                 "27",
                  "28",
-                 "28"
+                 "28",
+                 "29"
                ]
              }
            ]
