--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 04:05:04 2018</p>
+         Last Run: Sun Jul 22 05:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>37</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -48,21 +48,21 @@
                         <td>2</td>
                         <td>47</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>NE</td>
-                        <td>34</td>
+                        <td>13</td>
+                        <td>NNE</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>56</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNE</td>
-                        <td>30</td>
+                        <td>28</td>
                      </tr>
                   </tbody>
                </table>
@@ -172,7 +172,7 @@
                "data":[
                  "2",
                  "2",
-                 "4"
+                 "3"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "37",
-                 "34",
-                 "30"
+                 "38",
+                 "33",
+                 "28"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 04:05:04 2018</p>
+         Last Run: Sun Jul 22 05:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -237,7 +237,7 @@
                         <td>42</td>
                         <td>2</td>
                         <td>11</td>
-                        <td>SE</td>
+                        <td>ESE</td>
                         <td>64</td>
                      </tr>
                      <tr>
@@ -246,7 +246,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -270,23 +270,23 @@
                         <td>17</td>
                         <td>17</td>
                         <td>24</td>
-                        <td>56</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>33</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>24</td>
-                        <td>65</td>
+                        <td>23</td>
+                        <td>64</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>E</td>
-                        <td>28</td>
+                        <td>26</td>
                      </tr>
                   </tbody>
                </table>
@@ -406,7 +406,7 @@
                  "0",
                  "1",
                  "24",
-                 "24"
+                 "23"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "42",
-                 "44",
+                 "43",
                  "46",
-                 "56",
-                 "65"
+                 "54",
+                 "64"
                ]
              },
              {
@@ -429,8 +429,8 @@
                  "64",
                  "67",
                  "51",
-                 "33",
-                 "28"
+                 "32",
+                 "26"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 04:05:04 2018</p>
+         Last Run: Sun Jul 22 05:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -493,8 +493,8 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>0</td>
                         <td>25</td>
                         <td>6</td>
@@ -517,8 +517,8 @@
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>29</td>
-                        <td>29</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
                         <td>21</td>
                         <td>6</td>
@@ -572,9 +572,9 @@
                "data":[
                  "24",
                  "26",
+                 "27",
                  "28",
-                 "28",
-                 "29"
+                 "28"
                ]
              },
              {
@@ -585,9 +585,9 @@
                "data":[
                  "24",
                  "26",
+                 "27",
                  "28",
-                 "28",
-                 "29"
+                 "28"
                ]
              }
            ]
