--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 05:05:04 2018</p>
+         Last Run: Sun Jul 22 06:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>38</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -48,21 +48,21 @@
                         <td>2</td>
                         <td>47</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>NNE</td>
-                        <td>33</td>
+                        <td>11</td>
+                        <td>NE</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
                         <td>3</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNE</td>
-                        <td>28</td>
+                        <td>35</td>
                      </tr>
                   </tbody>
                </table>
@@ -182,7 +182,7 @@
                "data":[
                  "46",
                  "47",
-                 "56"
+                 "55"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "38",
-                 "33",
-                 "28"
+                 "49",
+                 "42",
+                 "35"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 05:05:04 2018</p>
+         Last Run: Sun Jul 22 06:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 05:05:04 2018</p>
+         Last Run: Sun Jul 22 06:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -469,34 +469,34 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>34</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WNW</td>
                         <td>1</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>28</td>
                         <td>5</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>W</td>
                         <td>1</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
-                        <td>25</td>
+                        <td>24</td>
                         <td>6</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -505,21 +505,21 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>29</td>
+                        <td>29</td>
                         <td>0</td>
-                        <td>23</td>
+                        <td>22</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>NE</td>
+                        <td>NNE</td>
                         <td>2</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
-                        <td>0</td>
+                        <td>29</td>
+                        <td>29</td>
+                        <td>14</td>
                         <td>21</td>
                         <td>6</td>
                         <td>11</td>
@@ -570,11 +570,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "24",
-                 "26",
+                 "25",
                  "27",
                  "28",
-                 "28"
+                 "29",
+                 "29"
                ]
              },
              {
@@ -583,11 +583,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "24",
-                 "26",
+                 "25",
                  "27",
                  "28",
-                 "28"
+                 "29",
+                 "29"
                ]
              }
            ]
@@ -644,7 +644,7 @@
                  "0",
                  "0",
                  "0",
-                 "0"
+                 "14"
                ]
              },
              {
@@ -652,10 +652,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
-                 "29",
-                 "25",
-                 "23",
+                 "34",
+                 "28",
+                 "24",
+                 "22",
                  "21"
                ]
              },
